# crypto-trader

./: .gitignore  README.md  configs.py  develop.ipynb  pyproject.toml  requirements.txt  setup.py
data/: detect_incorrect_data.py  dev.py  settings.json  utils.py
data/collection/: binance.py  data_collector.py  main.py  poloniex.py
data_collection/: data_collector.py  highest_volume_pairs.py  main.py  settings.json  settings.py  settings_reader.py  test.py  utils.py
model/: data_loader.py  environment.py  environment_settings.json  policy.py  preprocessor.py  train_model.py  value.py
ofrl/: agents.py  algorithms.py  buffers.py  environments.py  insights.py  rewards.py  states.py  utils.py
opal/: environments.py  opal_config.py  rewards.py  utils.py
opal/scripts/: train_ppo.py
scripts/: configs.py  hyperparameter_settings.toml  preprocess_data.py  train.py  utils.py
tests/: configs.py  test_converters.py  test_data_loader.py  test_environments.py  test_indicators.py  test_rewards.py  test_simulate.py  test_states.py  test_utils.py  test_validators.py
tests/resources/processed/: ADA.csv  ATOM.csv
tests/resources/raw/: ADA.csv  ATOM.csv
trader/: benchmarks.py  configs.py  converters.py  data_loader.py  environment.py  evaluation.py  indicators.py  rewards.py  simulate.py  states.py  train_model.py  utils.py  validators.py
utils/: plot_rewards.py
